--- a/index.html
+++ b/index.html
@@ -132,37 +132,37 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
 
     <div class="w3-col m3">
-      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      <img src="https://via.placeholder.com/150" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="">
     </div>
   </div>
 </div>
