--- a/schedule.html
+++ b/schedule.html
@@ -19,9 +19,9 @@
     </header>
 
     <section class="container">
-			<img class="box" src="./img/Schedule_Fall2019.png" alt="Schedule Fall 2019">
-            <img class="box" src="./img/Schedule_Spring2019_V4.png" alt="Schedule Spring 2019">
-            <img class="box" src="./img/Schedule_Fall2018_V2.png" alt="Schedule Fall 2018">
+	    <img class="box" src="./img/Schedule_Fall2019.png" alt="Schedule Fall 2019">
+            <!––<img class="box" src="./img/Schedule_Spring2019_V4.png" alt="Schedule Spring 2019">
+            <img class="box" src="./img/Schedule_Fall2018_V2.png" alt="Schedule Fall 2018">-->
     </section>
 
   </body>
