--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@
 
     <section class="container">
 	    <iframe src="https://calendar.google.com/calendar/embed?src=ullrichd%40allegheny.edu&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-	    <!--<img class="box" src="./img/Schedule_Spring2020.png" alt="Schedule Spring 2020">-->
+	    <img class="box" src="./img/Schedule_Spring2020.png" alt="Schedule Spring 2020">
             <!--<img class="box" src="./img/Schedule_Spring2019_V4.png" alt="Schedule Spring 2019">-->
             <!--<img class="box" src="./img/Schedule_Fall2018_V2.png" alt="Schedule Fall 2018">-->
     </section>
