--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,16 @@
     <title>Schedule</title>
     <link rel="stylesheet" type="text/css" href="./css/schedule.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156912353-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156912353-1');
+</script>
+
   </head>
 
   <body>
