--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Daniel Ullrich</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,6 +66,7 @@ body, html {
   }
 }
 </style>
+</head>
 <body>
 
 <!-- Navbar (sit on top) -->
