--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url("./img/background_1.png");
+  background-image: url("./img/background_1.jpg");
   min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("./img/background_2.png");
+  background-image: url("./img/background_2.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("./img/background_3.png");
+  background-image: url("./img/background_3.jpg");
   min-height: 400px;
 }
 
